--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewViewCell/AKINewViewCell.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewViewCell/AKINewViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="AKINewViewCell" customModule="AKIGangstaNews" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="AKINewViewCell" rowHeight="44" id="KGk-i7-Jjw" customClass="AKINewViewCell" customModule="AKIGangstaNews" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -41,6 +41,10 @@
                     <constraint firstItem="LN5-Au-pD1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uQT-84-uFW"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="headerLabel" destination="FxR-k5-EXO" id="Yup-nK-uy4"/>
+                <outlet property="logoImage" destination="LN5-Au-pD1" id="4Hu-Fy-Vf1"/>
+            </connections>
         </tableViewCell>
     </objects>
     <resources>
