--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKINewsViewController/AKINewsViewController.xib
@@ -18,13 +18,13 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" style="plain" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1UZ-g3-j1f">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1UZ-g3-j1f" customClass="AKINewsView" customModule="AKIGangstaNews" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <inset key="scrollIndicatorInsets" minX="-1" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="cud-Rc-fSe"/>
-                        <outlet property="delegate" destination="-1" id="C2Y-cx-4R0"/>
+                        <outlet property="dataSource" destination="-1" id="0gY-ks-aJi"/>
+                        <outlet property="delegate" destination="-1" id="6Nb-VE-Rv7"/>
                     </connections>
                 </tableView>
             </subviews>
