--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKIRegistrationViewController/AKIRegistrationViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKIRegistrationViewController/AKIRegistrationViewController.xib
@@ -15,92 +15,94 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="AKIRegistrationView" customModule="AKIGangstaNews" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0SW-5L-tdM">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="668"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lYI-iM-r16">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="668"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <subviews>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="noob2016@mail.ru" borderStyle="bezel" placeholder="E-mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BWH-U5-o0q">
+                                    <rect key="frame" x="39" y="443" width="296" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="zjE-Fi-Kl4"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="noob2016" borderStyle="bezel" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="th1-1O-YtK">
+                                    <rect key="frame" x="39" y="490" width="296" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="IlE-pb-YgF"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                    <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                </textField>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="rMx-dk-WJs">
+                                    <rect key="frame" x="21" y="-1" width="329" height="366"/>
+                                </imageView>
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="noob2016" borderStyle="bezel" placeholder="Login" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Pg-dW-1Om">
+                                    <rect key="frame" x="39" y="394" width="296" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="ATW-NO-0Lw"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cjv-WI-Qvq">
+                                    <rect key="frame" x="39" y="550" width="296" height="30"/>
+                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="o5o-27-4dm"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                    <state key="normal" title="Registration">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="registrationButton:" destination="-1" eventType="touchUpInside" id="dmX-VT-AZY"/>
+                                    </connections>
+                                </button>
+                            </subviews>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstItem="rMx-dk-WJs" firstAttribute="top" secondItem="lYI-iM-r16" secondAttribute="top" constant="-1" id="3Tc-gU-w5o"/>
+                                <constraint firstItem="0Pg-dW-1Om" firstAttribute="leading" secondItem="BWH-U5-o0q" secondAttribute="leading" id="5be-W0-9Ja"/>
+                                <constraint firstItem="0Pg-dW-1Om" firstAttribute="centerX" secondItem="lYI-iM-r16" secondAttribute="centerX" id="7dB-RW-d2u"/>
+                                <constraint firstItem="BWH-U5-o0q" firstAttribute="leading" secondItem="th1-1O-YtK" secondAttribute="leading" id="CTh-Ch-AzE"/>
+                                <constraint firstItem="BWH-U5-o0q" firstAttribute="top" secondItem="0Pg-dW-1Om" secondAttribute="bottom" constant="19" id="FcI-Yz-xFx"/>
+                                <constraint firstAttribute="bottom" secondItem="Cjv-WI-Qvq" secondAttribute="bottom" constant="87" id="I1F-hv-Cc2"/>
+                                <constraint firstItem="0Pg-dW-1Om" firstAttribute="top" secondItem="rMx-dk-WJs" secondAttribute="bottom" constant="29" id="LHu-FN-yMM"/>
+                                <constraint firstAttribute="trailing" secondItem="rMx-dk-WJs" secondAttribute="trailing" constant="25" id="LsJ-Eq-Jog"/>
+                                <constraint firstItem="rMx-dk-WJs" firstAttribute="leading" secondItem="lYI-iM-r16" secondAttribute="leading" constant="21" id="P57-5B-Uja"/>
+                                <constraint firstItem="th1-1O-YtK" firstAttribute="leading" secondItem="Cjv-WI-Qvq" secondAttribute="leading" id="Rh6-no-atN"/>
+                                <constraint firstItem="0Pg-dW-1Om" firstAttribute="leading" secondItem="lYI-iM-r16" secondAttribute="leading" constant="39" id="Vfe-dg-YjU"/>
+                                <constraint firstItem="0Pg-dW-1Om" firstAttribute="trailing" secondItem="BWH-U5-o0q" secondAttribute="trailing" id="qSE-g9-iTs"/>
+                                <constraint firstItem="th1-1O-YtK" firstAttribute="trailing" secondItem="Cjv-WI-Qvq" secondAttribute="trailing" id="rlI-Wu-kUd"/>
+                                <constraint firstItem="th1-1O-YtK" firstAttribute="top" secondItem="BWH-U5-o0q" secondAttribute="bottom" constant="17" id="s2L-9i-xEJ"/>
+                                <constraint firstItem="Cjv-WI-Qvq" firstAttribute="top" secondItem="th1-1O-YtK" secondAttribute="bottom" constant="30" id="t76-Yd-o3t"/>
+                                <constraint firstItem="BWH-U5-o0q" firstAttribute="trailing" secondItem="th1-1O-YtK" secondAttribute="trailing" id="zoV-ly-pRG"/>
+                            </constraints>
                         </view>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="E-mail" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BWH-U5-o0q">
-                            <rect key="frame" x="19" y="466" width="333" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="idt-Hc-564"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="th1-1O-YtK">
-                            <rect key="frame" x="19" y="422" width="333" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="0K6-aK-qYW"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                        </textField>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cjv-WI-Qvq">
-                            <rect key="frame" x="19" y="520" width="333" height="30"/>
-                            <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="Lzj-qi-ZeB"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                            <state key="normal" title="Registration">
-                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </state>
-                            <connections>
-                                <action selector="registrationButton:" destination="-1" eventType="touchUpInside" id="dmX-VT-AZY"/>
-                            </connections>
-                        </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="rMx-dk-WJs">
-                            <rect key="frame" x="19" y="10" width="333" height="345"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="345" id="ung-89-P2y"/>
-                            </constraints>
-                        </imageView>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Login" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0Pg-dW-1Om">
-                            <rect key="frame" x="19" y="377" width="333" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="30" id="mh0-Qx-2hN"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="lYI-iM-r16" secondAttribute="trailing" id="5Ww-mr-Kve"/>
-                        <constraint firstItem="0Pg-dW-1Om" firstAttribute="leading" secondItem="th1-1O-YtK" secondAttribute="leading" id="Cei-89-m6R"/>
-                        <constraint firstItem="lYI-iM-r16" firstAttribute="centerY" secondItem="0SW-5L-tdM" secondAttribute="centerY" id="G0I-du-LPM"/>
-                        <constraint firstItem="0Pg-dW-1Om" firstAttribute="top" secondItem="rMx-dk-WJs" secondAttribute="bottom" constant="22" id="Hd9-g8-Pys"/>
-                        <constraint firstItem="0Pg-dW-1Om" firstAttribute="trailing" secondItem="th1-1O-YtK" secondAttribute="trailing" id="Inv-YF-xrm"/>
-                        <constraint firstItem="Cjv-WI-Qvq" firstAttribute="top" secondItem="BWH-U5-o0q" secondAttribute="bottom" constant="24" id="J48-VV-b1G"/>
-                        <constraint firstItem="lYI-iM-r16" firstAttribute="leading" secondItem="0SW-5L-tdM" secondAttribute="leading" id="JuK-Ks-AQQ"/>
-                        <constraint firstItem="rMx-dk-WJs" firstAttribute="trailing" secondItem="0Pg-dW-1Om" secondAttribute="trailing" id="Qdm-lm-t5l"/>
-                        <constraint firstAttribute="trailing" secondItem="rMx-dk-WJs" secondAttribute="trailing" constant="23" id="RLI-hG-nVD"/>
-                        <constraint firstItem="lYI-iM-r16" firstAttribute="centerX" secondItem="0SW-5L-tdM" secondAttribute="centerX" id="VB0-MY-oeV"/>
-                        <constraint firstItem="lYI-iM-r16" firstAttribute="top" secondItem="0SW-5L-tdM" secondAttribute="top" id="VIm-HA-m3j"/>
-                        <constraint firstAttribute="bottom" secondItem="lYI-iM-r16" secondAttribute="bottom" id="X7h-bc-0Q0"/>
-                        <constraint firstItem="rMx-dk-WJs" firstAttribute="leading" secondItem="0SW-5L-tdM" secondAttribute="leading" constant="19" id="XUP-2Q-Cdw"/>
-                        <constraint firstItem="th1-1O-YtK" firstAttribute="top" secondItem="0Pg-dW-1Om" secondAttribute="bottom" constant="15" id="YEc-bl-mh2"/>
-                        <constraint firstItem="BWH-U5-o0q" firstAttribute="trailing" secondItem="Cjv-WI-Qvq" secondAttribute="trailing" id="YtE-ho-d2y"/>
-                        <constraint firstItem="th1-1O-YtK" firstAttribute="trailing" secondItem="BWH-U5-o0q" secondAttribute="trailing" id="fb6-5m-eBm"/>
-                        <constraint firstItem="rMx-dk-WJs" firstAttribute="top" secondItem="0SW-5L-tdM" secondAttribute="top" constant="10" id="hTR-TD-j0I"/>
-                        <constraint firstItem="BWH-U5-o0q" firstAttribute="leading" secondItem="Cjv-WI-Qvq" secondAttribute="leading" id="kRa-8h-sOm"/>
-                        <constraint firstItem="rMx-dk-WJs" firstAttribute="leading" secondItem="0Pg-dW-1Om" secondAttribute="leading" id="kp1-2J-Lvp"/>
-                        <constraint firstItem="BWH-U5-o0q" firstAttribute="top" secondItem="th1-1O-YtK" secondAttribute="bottom" constant="14" id="lsR-GA-0v8"/>
-                        <constraint firstItem="th1-1O-YtK" firstAttribute="leading" secondItem="BWH-U5-o0q" secondAttribute="leading" id="yiN-rg-C7H"/>
+                        <constraint firstItem="lYI-iM-r16" firstAttribute="leading" secondItem="0SW-5L-tdM" secondAttribute="leading" id="0FX-bc-9RM"/>
+                        <constraint firstItem="lYI-iM-r16" firstAttribute="top" secondItem="0SW-5L-tdM" secondAttribute="top" id="Da0-Cw-mdh"/>
+                        <constraint firstAttribute="trailing" secondItem="lYI-iM-r16" secondAttribute="trailing" id="NpG-qL-zoK"/>
+                        <constraint firstAttribute="bottom" secondItem="lYI-iM-r16" secondAttribute="bottom" id="eNa-bg-cSn"/>
+                        <constraint firstItem="lYI-iM-r16" firstAttribute="centerY" secondItem="0SW-5L-tdM" secondAttribute="centerY" id="k0P-H5-IEg"/>
+                        <constraint firstItem="lYI-iM-r16" firstAttribute="centerX" secondItem="0SW-5L-tdM" secondAttribute="centerX" id="yYl-Ek-x5u"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="0SW-5L-tdM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ImI-HI-Dv7"/>
-                <constraint firstAttribute="trailing" secondItem="0SW-5L-tdM" secondAttribute="trailing" constant="225" id="hQO-8c-U5N"/>
-                <constraint firstAttribute="bottom" secondItem="0SW-5L-tdM" secondAttribute="bottom" constant="-68" id="jTe-8R-odr"/>
-                <constraint firstItem="0SW-5L-tdM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="yQn-VH-wBi"/>
+                <constraint firstItem="0SW-5L-tdM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="b3G-63-lu1"/>
+                <constraint firstItem="0SW-5L-tdM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="mAY-Hi-ULJ"/>
+                <constraint firstAttribute="bottom" secondItem="0SW-5L-tdM" secondAttribute="bottom" id="oY3-gL-rlY"/>
+                <constraint firstAttribute="trailing" secondItem="0SW-5L-tdM" secondAttribute="trailing" id="tTe-gI-xer"/>
             </constraints>
             <connections>
                 <outlet property="emailField" destination="BWH-U5-o0q" id="nmu-X6-gdd"/>
