--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKIRestorePasswordViewController/AKIRestorePasswordViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKIRestorePasswordViewController/AKIRestorePasswordViewController.xib
@@ -73,6 +73,9 @@
                                 <constraint firstItem="pWo-O0-1in" firstAttribute="trailing" secondItem="EUP-PE-C2V" secondAttribute="trailing" id="srs-S8-fR1"/>
                                 <constraint firstAttribute="trailing" secondItem="Tit-Ju-ArC" secondAttribute="trailing" constant="23" id="zz7-gY-lkZ"/>
                             </constraints>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="ooc-hh-gzN" appends="YES" id="Ry7-um-TPP"/>
+                            </connections>
                         </view>
                     </subviews>
                     <constraints>
@@ -99,9 +102,15 @@
                 <outlet property="scrollView" destination="2so-hi-mVr" id="3CH-uQ-WKv"/>
                 <outlet property="sendButton" destination="lMq-ey-ZNr" id="9hx-lc-0J7"/>
                 <outlet property="supportView" destination="p5N-sc-FLS" id="C61-KL-zNC"/>
+                <outlet property="tapRecognizer" destination="ooc-hh-gzN" id="2cc-rQ-HcK"/>
             </connections>
             <point key="canvasLocation" x="25.5" y="51.5"/>
         </view>
+        <tapGestureRecognizer id="ooc-hh-gzN">
+            <connections>
+                <action selector="tapGestureRecognizerWithSender:" destination="-1" id="kKa-lc-lse"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="logo" width="476" height="350"/>
