--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKIDetailNewsViewController/AKIDetailNewsViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKIDetailNewsViewController/AKIDetailNewsViewController.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,50 +25,54 @@
                             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="HoQ-ci-0t3">
-                                    <rect key="frame" x="21" y="16" width="331" height="321"/>
+                                    <rect key="frame" x="22" y="0.0" width="331" height="321"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="321" id="Azp-IJ-PTq"/>
+                                        <constraint firstAttribute="height" constant="321" id="BB7-1I-fYu"/>
                                     </constraints>
                                 </imageView>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aCU-Wg-J2C">
-                                    <rect key="frame" x="21" y="337" width="331" height="322"/>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                </textView>
                             </subviews>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="HoQ-ci-0t3" secondAttribute="trailing" constant="23" id="3Nz-9o-TZ4"/>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="top" secondItem="xXx-ha-BMO" secondAttribute="top" constant="16" id="SIS-oy-bgq"/>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="leading" secondItem="xXx-ha-BMO" secondAttribute="leading" constant="21" id="acf-gH-ksb"/>
-                                <constraint firstItem="aCU-Wg-J2C" firstAttribute="bottom" secondItem="xXx-ha-BMO" secondAttribute="bottomMargin" id="e3n-rW-Dmh"/>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="trailing" secondItem="aCU-Wg-J2C" secondAttribute="trailing" id="fxF-rq-2q2"/>
-                                <constraint firstItem="aCU-Wg-J2C" firstAttribute="top" secondItem="HoQ-ci-0t3" secondAttribute="bottom" id="svY-Ng-gbF"/>
-                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="leading" secondItem="aCU-Wg-J2C" secondAttribute="leading" id="xst-g6-ycD"/>
+                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="top" secondItem="xXx-ha-BMO" secondAttribute="top" id="7kM-gM-5JE"/>
+                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="centerX" secondItem="xXx-ha-BMO" secondAttribute="centerX" id="oIa-yD-dc2"/>
+                                <constraint firstItem="HoQ-ci-0t3" firstAttribute="leading" secondItem="xXx-ha-BMO" secondAttribute="leading" constant="22" id="xIb-Dn-tNi"/>
                             </constraints>
                         </view>
+                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCU-Wg-J2C">
+                            <rect key="frame" x="22" y="322" width="333" height="28"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="28" id="u6L-OI-x2i"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="70x-9h-aSG"/>
+                            </connections>
+                        </textView>
                     </subviews>
                     <constraints>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerX" secondItem="JnU-7I-HKe" secondAttribute="centerX" id="1Wh-Lt-brC"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" id="1m3-uJ-1gN"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerY" secondItem="JnU-7I-HKe" secondAttribute="centerY" id="QIb-Ha-SNd"/>
-                        <constraint firstAttribute="trailing" secondItem="xXx-ha-BMO" secondAttribute="trailing" id="asC-ah-jHD"/>
-                        <constraint firstAttribute="bottom" secondItem="xXx-ha-BMO" secondAttribute="bottom" id="fAO-nW-ivc"/>
-                        <constraint firstItem="xXx-ha-BMO" firstAttribute="top" secondItem="JnU-7I-HKe" secondAttribute="top" id="lYH-Ee-r3a"/>
+                        <constraint firstItem="aCU-Wg-J2C" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" constant="22" id="JyS-iN-67F"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="leading" secondItem="JnU-7I-HKe" secondAttribute="leading" id="RcL-cK-teH"/>
+                        <constraint firstAttribute="bottom" secondItem="xXx-ha-BMO" secondAttribute="bottom" id="Rrf-GN-G7V"/>
+                        <constraint firstAttribute="trailing" secondItem="aCU-Wg-J2C" secondAttribute="trailing" constant="20" id="T6g-iE-XVv"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerY" secondItem="JnU-7I-HKe" secondAttribute="centerY" id="VOy-Rs-AKw"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="centerX" secondItem="JnU-7I-HKe" secondAttribute="centerX" id="bVR-ro-9XS"/>
+                        <constraint firstAttribute="trailing" secondItem="xXx-ha-BMO" secondAttribute="trailing" id="eQU-rW-iI0"/>
+                        <constraint firstItem="xXx-ha-BMO" firstAttribute="top" secondItem="JnU-7I-HKe" secondAttribute="top" id="qu5-40-SK5"/>
+                        <constraint firstItem="aCU-Wg-J2C" firstAttribute="top" secondItem="JnU-7I-HKe" secondAttribute="top" constant="322" id="wIw-3N-MJQ"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="JnU-7I-HKe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="LbG-nU-9Nn"/>
-                <constraint firstItem="JnU-7I-HKe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ujl-TE-F2l"/>
-                <constraint firstAttribute="trailing" secondItem="JnU-7I-HKe" secondAttribute="trailing" id="jCC-Rz-KCB"/>
-                <constraint firstAttribute="bottom" secondItem="JnU-7I-HKe" secondAttribute="bottom" id="nKT-rD-kVa"/>
+                <constraint firstAttribute="bottom" secondItem="JnU-7I-HKe" secondAttribute="bottom" id="1TJ-EB-Gll"/>
+                <constraint firstItem="JnU-7I-HKe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GKQ-Wj-WkH"/>
+                <constraint firstItem="JnU-7I-HKe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="bvf-pT-1Wh"/>
+                <constraint firstAttribute="trailing" secondItem="JnU-7I-HKe" secondAttribute="trailing" id="hDL-DO-Shj"/>
             </constraints>
             <connections>
-                <outlet property="contantField" destination="aCU-Wg-J2C" id="GdU-3f-9oZ"/>
+                <outlet property="contentField" destination="aCU-Wg-J2C" id="F1T-Ag-mjW"/>
                 <outlet property="imageVIew" destination="HoQ-ci-0t3" id="VdG-bJ-2U7"/>
                 <outlet property="scrollView" destination="JnU-7I-HKe" id="qix-qv-BrE"/>
                 <outlet property="supportView" destination="xXx-ha-BMO" id="dfR-ql-E4Z"/>
