--- a/AKIGangstaNews/Source/UI/AKIViewControllers/AKILoginViewController/AKILoginViewController.xib
+++ b/AKIGangstaNews/Source/UI/AKIViewControllers/AKILoginViewController/AKILoginViewController.xib
@@ -29,11 +29,11 @@
                                     <rect key="frame" x="31" y="0.0" width="317" height="406"/>
                                     <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                                 </imageView>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="noob2016@mail.ru" borderStyle="roundedRect" placeholder="Your email" textAlignment="center" minimumFontSize="16" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="eF6-Nd-aef">
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your email" textAlignment="center" minimumFontSize="16" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="eF6-Nd-aef">
                                     <rect key="frame" x="31" y="433" width="317" height="30"/>
                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="Apc-f0-c4F"/>
+                                        <constraint firstAttribute="height" constant="30" id="TMx-Ku-E2e"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits"/>
@@ -41,11 +41,11 @@
                                         <outlet property="delegate" destination="-1" id="Owd-TX-dYs"/>
                                     </connections>
                                 </textField>
-                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="noob2016" borderStyle="roundedRect" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Vo6-sr-yey">
+                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Vo6-sr-yey">
                                     <rect key="frame" x="31" y="488" width="317" height="30"/>
                                     <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="0N5-FJ-fMT"/>
+                                        <constraint firstAttribute="height" constant="30" id="Fbn-em-oii"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <textInputTraits key="textInputTraits" keyboardAppearance="light" secureTextEntry="YES"/>
@@ -56,18 +56,30 @@
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S3i-dM-R7H">
                                     <rect key="frame" x="82" y="629" width="206" height="30"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="cNi-8I-ubl"/>
+                                        <constraint firstAttribute="height" constant="30" id="n2H-V9-cd8"/>
                                     </constraints>
                                     <state key="normal" title="Forgot password?"/>
                                     <connections>
                                         <action selector="forgotPasswordButton:" destination="-1" eventType="touchUpInside" id="PTh-gD-Yom"/>
                                     </connections>
                                 </button>
+                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalCompressionResistancePriority="747" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LRb-TU-BYV">
+                                    <rect key="frame" x="198" y="564" width="150" height="30"/>
+                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <state key="normal" title="Authorization">
+                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="authorizationButton:" destination="-1" eventType="touchUpInside" id="T6M-hx-Se8"/>
+                                    </connections>
+                                </button>
                                 <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="746" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jN1-Ld-pyh">
-                                    <rect key="frame" x="31" y="564" width="164" height="30"/>
+                                    <rect key="frame" x="31" y="564" width="150" height="30"/>
                                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="WX8-BP-63N"/>
+                                        <constraint firstAttribute="height" constant="30" id="PN7-Dx-x7x"/>
+                                        <constraint firstAttribute="width" constant="150" id="crq-Uu-Lfg"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                     <state key="normal" title="Log In">
@@ -81,43 +93,30 @@
                                         <action selector="loginButton:" destination="-1" eventType="touchUpInside" id="FBi-99-47H"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalCompressionResistancePriority="747" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LRb-TU-BYV">
-                                    <rect key="frame" x="211" y="564" width="137" height="30"/>
-                                    <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="137" id="x0p-5z-JE2"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                    <state key="normal" title="Authorization">
-                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="authorizationButton:" destination="-1" eventType="touchUpInside" id="T6M-hx-Se8"/>
-                                    </connections>
-                                </button>
                             </subviews>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <gestureRecognizers/>
                             <constraints>
-                                <constraint firstItem="LRb-TU-BYV" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="trailing" constant="16" id="2jX-Qg-sXb"/>
-                                <constraint firstItem="eF6-Nd-aef" firstAttribute="leading" secondItem="Vo6-sr-yey" secondAttribute="leading" id="31K-OG-Mld"/>
-                                <constraint firstItem="Vo6-sr-yey" firstAttribute="trailing" secondItem="LRb-TU-BYV" secondAttribute="trailing" id="5Qq-4a-j16"/>
-                                <constraint firstItem="S3i-dM-R7H" firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottomMargin" id="5zW-w1-4QA"/>
-                                <constraint firstItem="Vo6-sr-yey" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="leading" id="IN4-SZ-Nec"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="eF6-Nd-aef" secondAttribute="leading" id="LsC-Vv-rvt"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="bottom" secondItem="LRb-TU-BYV" secondAttribute="bottom" id="OZQ-W9-3Vi"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="LRb-TU-BYV" secondAttribute="top" id="PVB-as-N6t"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="31" id="U2h-2A-ysz"/>
-                                <constraint firstItem="S3i-dM-R7H" firstAttribute="top" secondItem="jN1-Ld-pyh" secondAttribute="bottom" constant="35" id="Y5S-XF-P9A"/>
-                                <constraint firstItem="Vo6-sr-yey" firstAttribute="top" secondItem="eF6-Nd-aef" secondAttribute="bottom" constant="25" id="bSM-Ua-vVm"/>
-                                <constraint firstItem="S3i-dM-R7H" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="82" id="cTe-Xd-xbd"/>
-                                <constraint firstItem="eF6-Nd-aef" firstAttribute="trailing" secondItem="Vo6-sr-yey" secondAttribute="trailing" id="eBY-sk-Q4E"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="trailing" secondItem="eF6-Nd-aef" secondAttribute="trailing" id="fxf-TA-vem"/>
-                                <constraint firstItem="eF6-Nd-aef" firstAttribute="top" secondItem="lW1-H6-DLJ" secondAttribute="bottom" constant="27" id="hbW-SN-eX1"/>
-                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="top" secondItem="G86-5b-fOy" secondAttribute="top" id="lLi-Hq-19d"/>
-                                <constraint firstAttribute="trailing" secondItem="S3i-dM-R7H" secondAttribute="trailing" constant="87" id="uEp-mJ-uxY"/>
-                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="Vo6-sr-yey" secondAttribute="bottom" constant="46" id="ukE-bq-eGg"/>
-                                <constraint firstAttribute="trailing" secondItem="lW1-H6-DLJ" secondAttribute="trailing" constant="27" id="xAf-0R-qYi"/>
+                                <constraint firstItem="S3i-dM-R7H" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="82" id="0y3-2N-ViI"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="G86-5b-fOy" secondAttribute="leading" constant="31" id="2Cn-ia-LAv"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="top" secondItem="G86-5b-fOy" secondAttribute="top" id="8Qo-g0-pgq"/>
+                                <constraint firstItem="S3i-dM-R7H" firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottomMargin" id="9P9-rH-Pu0"/>
+                                <constraint firstItem="Vo6-sr-yey" firstAttribute="trailing" secondItem="LRb-TU-BYV" secondAttribute="trailing" id="BAL-Aq-5Jn"/>
+                                <constraint firstItem="eF6-Nd-aef" firstAttribute="leading" secondItem="Vo6-sr-yey" secondAttribute="leading" id="Bdl-Yy-nqn"/>
+                                <constraint firstAttribute="trailing" secondItem="S3i-dM-R7H" secondAttribute="trailing" constant="87" id="FKb-UU-L0f"/>
+                                <constraint firstItem="LRb-TU-BYV" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="trailing" constant="17" id="FuV-uh-0So"/>
+                                <constraint firstItem="eF6-Nd-aef" firstAttribute="top" secondItem="lW1-H6-DLJ" secondAttribute="bottom" constant="27" id="Ou6-NS-1nk"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="LRb-TU-BYV" secondAttribute="top" id="UNg-28-ygV"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="bottom" secondItem="LRb-TU-BYV" secondAttribute="bottom" id="Wwe-78-WKb"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="trailing" secondItem="eF6-Nd-aef" secondAttribute="trailing" id="cmW-LO-eVY"/>
+                                <constraint firstItem="Vo6-sr-yey" firstAttribute="top" secondItem="eF6-Nd-aef" secondAttribute="bottom" constant="25" id="gIl-ns-8Nb"/>
+                                <constraint firstItem="S3i-dM-R7H" firstAttribute="top" secondItem="jN1-Ld-pyh" secondAttribute="bottom" constant="35" id="kFq-70-w8e"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="width" secondItem="LRb-TU-BYV" secondAttribute="width" id="pk8-Tq-0Oc"/>
+                                <constraint firstAttribute="trailing" secondItem="lW1-H6-DLJ" secondAttribute="trailing" constant="27" id="qvN-Qq-tii"/>
+                                <constraint firstItem="Vo6-sr-yey" firstAttribute="leading" secondItem="jN1-Ld-pyh" secondAttribute="leading" id="tRO-gX-e3s"/>
+                                <constraint firstItem="jN1-Ld-pyh" firstAttribute="top" secondItem="Vo6-sr-yey" secondAttribute="bottom" constant="46" id="thD-gd-PWm"/>
+                                <constraint firstItem="eF6-Nd-aef" firstAttribute="trailing" secondItem="Vo6-sr-yey" secondAttribute="trailing" id="uqw-jc-3To"/>
+                                <constraint firstItem="lW1-H6-DLJ" firstAttribute="leading" secondItem="eF6-Nd-aef" secondAttribute="leading" id="xgQ-hu-JxU"/>
                             </constraints>
                             <connections>
                                 <outletCollection property="gestureRecognizers" destination="cXV-h7-cCj" appends="YES" id="WLY-A2-F7F"/>
@@ -126,21 +125,21 @@
                     </subviews>
                     <gestureRecognizers/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottom" id="1M8-m8-ddI"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerX" secondItem="jcA-qr-bU4" secondAttribute="centerX" id="49H-wp-PtM"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="top" secondItem="jcA-qr-bU4" secondAttribute="top" id="INb-zk-dU8"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="leading" secondItem="jcA-qr-bU4" secondAttribute="leading" id="lAM-hu-WFr"/>
-                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerY" secondItem="jcA-qr-bU4" secondAttribute="centerY" id="mkD-YC-J5K"/>
-                        <constraint firstAttribute="trailing" secondItem="G86-5b-fOy" secondAttribute="trailing" id="otX-nM-pFR"/>
+                        <constraint firstAttribute="trailing" secondItem="G86-5b-fOy" secondAttribute="trailing" id="0gr-a9-lwW"/>
+                        <constraint firstAttribute="bottom" secondItem="G86-5b-fOy" secondAttribute="bottom" id="Fay-pk-Nvr"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="top" secondItem="jcA-qr-bU4" secondAttribute="top" id="LAc-8N-tBE"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerY" secondItem="jcA-qr-bU4" secondAttribute="centerY" id="gzf-wX-RQ7"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="leading" secondItem="jcA-qr-bU4" secondAttribute="leading" id="hXU-Po-fZk"/>
+                        <constraint firstItem="G86-5b-fOy" firstAttribute="centerX" secondItem="jcA-qr-bU4" secondAttribute="centerX" id="ljm-Bu-wpi"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="jcA-qr-bU4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="IbV-Ox-fjj"/>
-                <constraint firstAttribute="trailing" secondItem="jcA-qr-bU4" secondAttribute="trailing" id="ONf-yp-5PC"/>
-                <constraint firstItem="jcA-qr-bU4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="S0s-Yk-60x"/>
-                <constraint firstAttribute="bottom" secondItem="jcA-qr-bU4" secondAttribute="bottom" id="itm-e4-xtJ"/>
+                <constraint firstAttribute="bottom" secondItem="jcA-qr-bU4" secondAttribute="bottom" id="XP1-jZ-Tpf"/>
+                <constraint firstItem="jcA-qr-bU4" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="koY-fG-POQ"/>
+                <constraint firstItem="jcA-qr-bU4" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mky-kD-Mjg"/>
+                <constraint firstAttribute="trailing" secondItem="jcA-qr-bU4" secondAttribute="trailing" id="yef-n3-xDM"/>
             </constraints>
             <connections>
                 <outlet property="authorizationButton" destination="LRb-TU-BYV" id="O1v-nd-48N"/>
